policies: rename list fields to be plural

--- a/deploy/helm/tracee/templates/tracee-policies.yaml
+++ b/deploy/helm/tracee/templates/tracee-policies.yaml
@@ -9,7 +9,8 @@ data:
   signatures.yaml: |-
     name: signature_events
     description: traces all signature events
-    defaultAction: log
+    defaultActions:
+      - log
     scope:
       - global
     rules:
