--- a/examples/policies/container_dns_events.yaml
+++ b/examples/policies/container_dns_events.yaml
@@ -2,7 +2,8 @@ name: container_dns_events
 description: traces dns events from containers
 scope:
   - container
-defaultAction: log
+defaultActions: 
+  - log
 rules:
   - event: net_packet_dns_request
   - event: net_packet_dns_response
