--- a/examples/policies/new_containers.yaml
+++ b/examples/policies/new_containers.yaml
@@ -2,7 +2,8 @@ name: new_containers
 description: traces events container_created and security_file_open only for new container
 scope: 
   - container=new
-defaultAction: log
+defaultActions: 
+  - log
 rules:
   - event: container_create
   - event: security_file_open
