--- a/examples/policies/new_pids.yaml
+++ b/examples/policies/new_pids.yaml
@@ -2,7 +2,8 @@ name: new_pids
 description: traces openat and security_file_open for new pids
 scope: 
   - pid=new
-defaultAction: log
+defaultActions: 
+  - log
 rules:
   - event: openat
   - event: security_file_open
