--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -11,7 +11,8 @@ data:
   signatures.yaml: |-
     name: signature_events
     description: traces all signature events
-    defaultAction: log
+    defaultActions:
+      - log
     scope:
       - global
     rules:
