--- a/examples/policies/openat_args_pahtname.yaml
+++ b/examples/policies/openat_args_pahtname.yaml
@@ -2,9 +2,10 @@ name: openat_args_pathname
 description: traces openat under /tmp/*
 scope: 
   - global
-defaultAction: log
+defaultActions: 
+  - log
 rules:
   - event: openat
-    filter:
+    filters:
       - args.pathname=/tmp*
 
