--- a/examples/policies/pid_equal.yaml
+++ b/examples/policies/pid_equal.yaml
@@ -2,12 +2,13 @@ name: pid_equal
 description: traces read and write syscalls for pids 1000, and 2000
 scope: 
   - global
-defaultAction: log
+defaultActions: 
+  - log
 rules:
   - event: read
-    filter: 
+    filters: 
       - pid=1000
   - event: write
-    filter:
+    filters:
       - pid=2000
 
