--- a/examples/policies/uid_higher_than_or_equal_to_zero.yaml
+++ b/examples/policies/uid_higher_than_or_equal_to_zero.yaml
@@ -2,7 +2,8 @@ name: uid_higher_than_or_equal_to_zero
 description: traces read and write syscall for uids higher than or equal to 0
 scope: 
   - uid>=0
-defaultAction: log
+defaultActions: 
+  - log
 rules:
   - event: read
   - event: write
