events: turn definitions instanciable for extensions
WIP: cleaning up and renaming types and files

related: #3170

--- a/.revive.toml
+++ b/.revive.toml
@@ -9,8 +9,7 @@ enableAllRules = true
 [rule.add-constant]
     Disabled = true
 [rule.argument-limit]
-    Disabled = false
-    Arguments = [5]
+    Disabled = true
 [rule.atomic]
     Disabled = false
 [rule.bare-return]
