--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -204,13 +204,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   alma418-arm64-core:
     name: RHEL8 4.18 ARM64
@@ -234,13 +234,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.RHEL_ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.RHEL_ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # AMZN2 5.10 (jammy userland with AMZN2 kernel)
   #
@@ -266,13 +266,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   amzn2510-arm64-core:
     name: AMZN2 5.10 ARM64
@@ -296,13 +296,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.RHEL_ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.RHEL_ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # GKE 5.4 (jammy userland with GKE kernel)
   #
@@ -328,13 +328,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # GKE 5.10 (jammy userland with GKE kernel)
   #
@@ -360,13 +360,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # GKE 5.15 (jammy userland with GKE kernel)
   #
@@ -392,13 +392,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   gke515-arm64-core:
     name: GKE 5.15 ARM64
@@ -422,13 +422,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.RHEL_ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.RHEL_ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # FOCAL v5.4
   #
@@ -454,13 +454,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   focal54-arm64-core:
     name: Focal 5.4 ARM64
@@ -484,13 +484,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # FOCAL v5.13
   #
@@ -516,13 +516,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   focal513-arm64-core:
     name: Focal 5.13 ARM64
@@ -546,13 +546,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # JAMMY v5.15
   #
@@ -578,13 +578,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   jammy515-arm64-core:
     name: Jammy 5.15 ARM64
@@ -608,13 +608,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # JAMMY v5.19
   #
@@ -640,13 +640,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   # ARM64
   jammy519-arm64-core:
     name: Jammy 5.19 ARM64
@@ -670,13 +670,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test.sh
+          TESTS="${{ env.ARM64_TESTS }}" ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # JAMMY v6.1
   #
@@ -702,13 +702,13 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
   #
   # JAMMY v6.3
   #
@@ -734,10 +734,10 @@ jobs:
           submodules: true
       - name: "Kernel"
         run: |
-          ./tests/e2e-kernel-test.sh
+          ./tests/e2e-kernel-test/test.sh
       - name: "Network"
         run: |
-          ./tests/e2e-net-test.sh
+          ./tests/e2e-net-test/test.sh
       - name: "Instrumentation"
         run: |
-          ./tests/e2e-inst-test.sh
+          ./tests/e2e-inst-test/test.sh
