--- a/tests/e2e-net-test/policies/dns.yaml
+++ b/tests/e2e-net-test/policies/dns.yaml
@@ -1,7 +1,7 @@
 name: dns_test
 description: test tracee's dns events
 scope: 
-  - comm=isc-net-0000,isc-net-0000 # nslookup uses these commands internally
+  - comm=nslookup,isc-net-0000,isc-worker0000 # nslookup uses these commands internally
 defaultActions: 
   - log
 rules:
