fix(flags)!: remove --help, fix help command
The --help workaround for flags is removed, and the help command is
fixed to work as expected for both commands and flags.

BREAKING CHANGE: --help is no longer supported for flags. Use:
 - "tracee [command] --help" for more information about a command.
 - "tracee help [command|flag]" for more information about a command or
    flag.

--- a/builder/Makefile.tracee-container
+++ b/builder/Makefile.tracee-container
@@ -75,7 +75,7 @@ help:
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee-container build-tracee"
 	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee ARG=\"--help\""
+	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee ARG=\"help\""
 	@echo ""
 	@echo "    > This will run tracee using provided arguments."
 	@echo ""
