--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -8,13 +8,13 @@ metadata:
     app.kubernetes.io/part-of: tracee
   name: tracee-policies
 data:
-  signatures.yaml: |-
+  default.yaml: |-
     apiVersion: tracee.aquasec.com/v1beta1
     kind: Policy
     metadata:
-      name: signature-events
+      name: default-policy
       annotations:
-        description: traces all signature events
+        description: traces default events
     spec:
       scope:
         - global
@@ -49,6 +49,46 @@ data:
         - event: proc_fops_hooking
         - event: syscall_hooking
         - event: dropped_executable
+        - event: creat
+        - event: chmod
+        - event: fchmod
+        - event: chown
+        - event: fchown
+        - event: lchown
+        - event: ptrace
+        - event: setuid
+        - event: setgid
+        - event: setpgid
+        - event: setsid
+        - event: setreuid
+        - event: setregid
+        - event: setresuid
+        - event: setresgid
+        - event: setfsuid
+        - event: setfsgid
+        - event: init_module
+        - event: fchownat
+        - event: fchmodat
+        - event: setns
+        - event: process_vm_readv
+        - event: process_vm_writev
+        - event: finit_module
+        - event: memfd_create
+        - event: move_mount
+        - event: sched_process_exec
+        - event: security_inode_unlink
+        - event: security_socket_connect
+        - event: security_socket_accept
+        - event: security_socket_bind
+        - event: security_sb_mount
+        - event: container_create
+        - event: container_remove
+        - event: net_packet_icmp
+        - event: net_packet_icmpv6
+        - event: net_packet_dns_request
+        - event: net_packet_dns_response
+        - event: net_packet_http_request
+        - event: net_packet_http_response
 ---
 apiVersion: v1
 kind: ConfigMap
