--- a/examples/policies/pid_equal.yaml
+++ b/examples/policies/pid_equal.yaml
@@ -1,12 +1,16 @@
-name: pid_equal
-description: traces read and write syscalls for pids 1000, and 2000
-scope: 
-  - global
-rules:
-  - event: read
-    filters: 
-      - pid=1000
-  - event: write
-    filters:
-      - pid=2000
-
+apiVersion: aquasecurity.github.io/v1beta1
+kind: TraceePolicy
+metadata:
+  name: pid_equal
+  annotations:
+    description: traces read and write syscalls for pids 1000, and 2000
+spec:
+  scope: 
+    - global
+  rules:
+    - event: read
+      filters: 
+        - pid=1000
+    - event: write
+      filters:
+        - pid=2000
