--- a/examples/policies/uid_higher_than_or_equal_to_zero.yaml
+++ b/examples/policies/uid_higher_than_or_equal_to_zero.yaml
@@ -1,8 +1,12 @@
-name: uid_higher_than_or_equal_to_zero
-description: traces read and write syscall for uids higher than or equal to 0
-scope: 
-  - uid>=0
-rules:
-  - event: read
-  - event: write
-
+apiVersion: aquasecurity.github.io/v1beta1
+kind: TraceePolicy
+metadata:
+  name: uid_higher_than_or_equal_to_zero
+  annotations:
+    description: traces read and write syscall for uids higher than or equal to 0
+spec:
+  scope: 
+    - uid>=0
+  rules:
+    - event: read
+    - event: write
