--- a/examples/policies/openat_args_pahtname.yaml
+++ b/examples/policies/openat_args_pahtname.yaml
@@ -1,7 +1,7 @@
 apiVersion: aquasecurity.github.io/v1beta1
 kind: TraceePolicy
 metadata:
-  name: openat_args_pathname
+  name: openat-args-pathname
   annotations:
     description: traces openat under /tmp/*
 spec:
