--- a/deploy/helm/tracee/templates/tracee-policies.yaml
+++ b/deploy/helm/tracee/templates/tracee-policies.yaml
@@ -10,7 +10,7 @@ data:
     apiVersion: aquasecurity.github.io/v1beta1
     kind: TraceePolicy
     metadata:
-      name: signature_events
+      name: signature-events
       annotations:
         description: traces all signature events
     spec:
