--- a/examples/policies/container_dns_events.yaml
+++ b/examples/policies/container_dns_events.yaml
@@ -1,7 +1,7 @@
 apiVersion: aquasecurity.github.io/v1beta1
 kind: TraceePolicy
 metadata:
-  name: container_dns_events
+  name: container-dns-events
   annotations:
     description: traces dns events from containers
 spec:
