--- a/examples/policies/context_comm.yaml
+++ b/examples/policies/context_comm.yaml
@@ -1,7 +1,7 @@
 apiVersion: aquasecurity.github.io/v1beta1
 kind: TraceePolicy
 metadata:
-  name: context_comm
+  name: context-comm
   annotations:
     description: traces openat done by ls
 spec:
