docs: additional resources for the docs
Signed-off-by: AnaisUrlichs <urlichsanais@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - Working with Tracee's Policies on Kubernetes: tutorials/k8s-policies.md
       - Deploy Tracee Grafana Dashboard: tutorials/deploy-grafana-dashboard.md
       - Accessing Tracee Logs through Promtail and Loki: tutorials/promtail.md
+      - Additional Resources: tutorials/additional-resources.md
   - Docs:
       - Overview: docs/overview.md
       - Events:
