chore(flags)!: rename !container to not-container
BREAKING CHANGE: !container is now not-container

Rename the scope option !container to not-container, eliminating the
need of quoting the scope value.

--- a/examples/policies/not_containers.yaml
+++ b/examples/policies/not_containers.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     description: traces anti_debugging in the host
 spec:
-  scope: 
-    - "!container"
+  scope:
+    - not-container
   rules:
     - event: anti_debugging
