chore(flags): add scope exec/executable option
The exec/executable scope option is the same of bin/binary, but it is
now the default option among the two. The bin/binary option is now
an alias for exec/executable.

--- a/examples/policies/dig.yaml
+++ b/examples/policies/dig.yaml
@@ -3,10 +3,10 @@ kind: TraceePolicy
 metadata:
   name: dig
   annotations:
-    description: traces dns events from the dig binary
+    description: traces dns events from the dig executable
 spec:
-  scope: 
-    - binary=/usr/bin/dig
+  scope:
+    - executable=/usr/bin/dig
   rules:
-    - event: net_packet_dns_request        
+    - event: net_packet_dns_request
     - event: net_packet_dns_response
