feature(proctree): create config setting for proctree cache size

--- a/examples/config/global_config.json
+++ b/examples/config/global_config.json
@@ -3,6 +3,9 @@
     "cache": [
         "none"
     ],
+    "proctree": [
+        "none"
+    ],
     "capabilities": [],
     "containers": false,
     "crs": [],
