chore(revive): disable unchecked-type-assertion
This probably should be re-enabled at some point.

--- a/.revive.toml
+++ b/.revive.toml
@@ -127,6 +127,8 @@ enableAllRules = true
     Disabled = true # TODO: rename variables correctly
 [rule.var-declaration]
     Disabled = false
+[rule.unchecked-type-assertion]
+    Disabled = true
 [rule.unconditional-recursion]
     Disabled = false
 [rule.unexported-naming]
