fix: rename policy apiVersion and kind

--- a/deploy/helm/tracee/templates/tracee-policies.yaml
+++ b/deploy/helm/tracee/templates/tracee-policies.yaml
@@ -7,8 +7,8 @@ metadata:
     {{- include "tracee.labels" . | nindent 4 }}
 data:
   signatures.yaml: |-
-    apiVersion: aquasecurity.github.io/v1beta1
-    kind: TraceePolicy
+    apiVersion: tracee.aquasec.com/v1beta1
+    kind: Policy
     metadata:
       name: signature-events
       annotations:
