--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -9,8 +9,8 @@ metadata:
   name: tracee-policies
 data:
   signatures.yaml: |-
-    apiVersion: aquasecurity.github.io/v1beta1
-    kind: TraceePolicy
+    apiVersion: tracee.aquasec.com/v1beta1
+    kind: Policy
     metadata:
       name: signature-events
       annotations:
