--- a/examples/policies/pid_equal.yaml
+++ b/examples/policies/pid_equal.yaml
@@ -1,5 +1,5 @@
-apiVersion: aquasecurity.github.io/v1beta1
-kind: TraceePolicy
+apiVersion: tracee.aquasec.com/v1beta1
+kind: Policy
 metadata:
   name: pid-equal
   annotations:
