--- a/examples/policies/uid_higher_than_or_equal_to_zero.yaml
+++ b/examples/policies/uid_higher_than_or_equal_to_zero.yaml
@@ -1,5 +1,5 @@
-apiVersion: aquasecurity.github.io/v1beta1
-kind: TraceePolicy
+apiVersion: tracee.aquasec.com/v1beta1
+kind: Policy
 metadata:
   name: uid-higher-than-or-equal-to-zero
   annotations:
