--- a/packaging/Dockerfile.ubuntu-packaging
+++ b/packaging/Dockerfile.ubuntu-packaging
@@ -21,14 +21,14 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get update && \
     apt-get install -y sudo coreutils findutils && \
     apt-get install -y bash git curl rsync && \
-    apt-get install -y llvm clang golang make gcc && \
+    apt-get install -y make gcc && \
     apt-get install -y linux-headers-generic && \
     apt-get install -y libelf-dev && \
     apt-get install -y zlib1g-dev && \
     apt-get install -y build-essential devscripts ubuntu-dev-tools && \
     apt-get install -y debhelper dh-exec dpkg-dev pkg-config && \
     apt-get install -y software-properties-common && \
-    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.48.0/opa_linux_amd64_static && \
+    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.56.0/opa_linux_amd64_static && \
     chmod 755 /usr/bin/opa
 
 # allow TRACEE* and LIBBPFGO* environment variables through sudo
@@ -56,8 +56,8 @@ RUN export uid=$uid gid=$gid && \
 # install golang
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
-    curl -L -o /tmp/golang.tar.xz https://go.dev/dl/go1.19.5.linux-amd64.tar.gz && \
-    tar -C /usr/local -xzf /tmp/golang.tar.xz && \
+    curl -L -o /tmp/golang.tar.gz https://go.dev/dl/go1.20.8.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf /tmp/golang.tar.gz && \
     echo "export GOROOT=/usr/local/go" >> /home/tracee/.bashrc && \
     echo "export GOPATH=/home/tracee/go" >> /home/tracee/.bashrc && \
     echo "export PATH=/home/tracee/go/bin:/usr/local/go/bin:$PATH" >> /home/tracee/.bashrc && \
@@ -67,12 +67,42 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 # install clang
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
-    curl -L -o /llvm.sh https://apt.llvm.org/llvm.sh && \
-    chmod 755 /llvm.sh && \
-    /llvm.sh 14 && \
-    rm /llvm.sh && \
-    update-alternatives --install /usr/bin/llc llc /usr/bin/llc-14 1 && \
-    update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 1
+    curl -L -o /tmp/clang.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.6/clang+llvm-14.0.6-x86_64-linux-gnu-rhel-8.4.tar.xz && \
+    tar -C /usr/local -xJf /tmp/clang.tar.xz && \
+    mv "/usr/local/clang+llvm-14.0.6-x86_64-linux-gnu-rhel-8.4" /usr/local/clang && \
+    echo "export PATH=/usr/local/clang/bin:$PATH" >> /home/tracee/.bashrc && \
+    update-alternatives --remove-all cc || true && \
+    update-alternatives --remove-all clang || true && \
+    update-alternatives --remove-all clang++ || true && \
+    update-alternatives --remove-all llc || true && \
+    update-alternatives --remove-all lld || true && \
+    update-alternatives --remove-all clangd || true && \
+    update-alternatives --remove-all clang-format || true && \
+    update-alternatives --remove-all llvm-strip || true && \
+    update-alternatives --remove-all llvm-config || true && \
+    update-alternatives --remove-all ld.lld || true && \
+    update-alternatives --remove-all llvm-ar || true && \
+    update-alternatives --remove-all llvm-nm || true && \
+    update-alternatives --remove-all llvm-objcopy || true && \
+    update-alternatives --remove-all llvm-objdump || true && \
+    update-alternatives --remove-all llvm-readelf || true && \
+    update-alternatives --remove-all opt || true && \
+    update-alternatives --install /usr/bin/clang clang /usr/local/clang/bin/clang 140 \
+        --slave /usr/bin/clang++ clang++ /usr/local/clang/bin/clang++ \
+        --slave /usr/bin/clangd clangd /usr/local/clang/bin/clangd \
+        --slave /usr/bin/clang-format clang-format /usr/local/clang/bin/clang-format \
+        --slave /usr/bin/lld lld /usr/local/clang/bin/lld \
+        --slave /usr/bin/llc llc /usr/local/clang/bin/llc \
+        --slave /usr/bin/llvm-strip llvm-strip /usr/local/clang/bin/llvm-strip \
+        --slave /usr/bin/llvm-config llvm-config /usr/local/clang/bin/llvm-config \
+        --slave /usr/bin/ld.lld ld.lld /usr/local/clang/bin/ld.lld \
+        --slave /usr/bin/llvm-ar llvm-ar /usr/local/clang/bin/llvm-ar \
+        --slave /usr/bin/llvm-nm llvm-nm /usr/local/clang/bin/llvm-nm \
+        --slave /usr/bin/llvm-objcopy llvm-objcopy /usr/local/clang/bin/llvm-objcopy \
+        --slave /usr/bin/llvm-objdump llvm-objdump /usr/local/clang/bin/llvm-objdump \
+        --slave /usr/bin/llvm-readelf llvm-readelf /usr/local/clang/bin/llvm-readelf \
+        --slave /usr/bin/opt opt /usr/local/clang/bin/opt \
+        --slave /usr/bin/cc cc /usr/local/clang/bin/clang
 
 USER tracee
 ENV HOME /home/tracee
