--- a/packaging/Dockerfile.fedora-packaging
+++ b/packaging/Dockerfile.fedora-packaging
@@ -63,8 +63,7 @@ RUN altarch=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
 
 # install clang
 
-RUN export DEBIAN_FRONTEND=noninteractive && \
-    curl -L -o /tmp/clang.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.6/clang+llvm-14.0.6-x86_64-linux-gnu-rhel-8.4.tar.xz && \
+RUN curl -L -o /tmp/clang.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.6/clang+llvm-14.0.6-x86_64-linux-gnu-rhel-8.4.tar.xz && \
     tar -C /usr/local -xJf /tmp/clang.tar.xz && \
     mv "/usr/local/clang+llvm-14.0.6-x86_64-linux-gnu-rhel-8.4" /usr/local/clang && \
     echo "export PATH=/usr/local/clang/bin:$PATH" >> /home/tracee/.bashrc && \
