chore(build): fix clang errors with new gh runners

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -23,6 +23,7 @@ on:
       - "**.go"
       - "**.sh"
       - "**/pr.yaml"
+      - "**/action.yaml"
 concurrency:
   group: ${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
