fix: link cosign tutorial to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
   - Tutorials: 
       - Overview: tutorials/overview.md
       - Working with Tracee's Policies on Kubernetes: tutorials/k8s-policies.md
+      - Cosign - verify tracee signature: tutorials/verify-tracee-signature.md
       - Deploy Tracee Grafana Dashboard: tutorials/deploy-grafana-dashboard.md
       - Accessing Tracee Logs through Promtail and Loki: tutorials/promtail.md
       - Additional Resources: tutorials/additional-resources.md
