--- a/examples/policies/signature_events.yaml
+++ b/examples/policies/signature_events.yaml
@@ -36,5 +36,5 @@ spec:
     - event: kernel_module_loading  
     - event: k8s_cert_theft 
     - event: proc_fops_hooking      
-    - event: syscall_hooking
+    # - event: syscall_hooking
     - event: dropped_executable
