--- a/deploy/helm/tracee/templates/tracee-policies.yaml
+++ b/deploy/helm/tracee/templates/tracee-policies.yaml
@@ -45,5 +45,5 @@ data:
         - event: kernel_module_loading
         - event: k8s_cert_theft
         - event: proc_fops_hooking
-        - event: syscall_hooking
+        # - event: syscall_hooking
         - event: dropped_executable
