--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -498,22 +498,24 @@ nav:
                     - net_packet_http_response: docs/events/builtin/network/net_packet_http_response.md
               - Behavioral Signatures: docs/events/builtin/signatures.md
               - Extra Events:
-                - do_sigaction: docs/events/builtin/extra/do_sigaction.md
-                - kallsysm_lookup_name: docs/events/builtin/extra/kallsyms_lookup_name.md
-                - vfs_read: docs/events/builtin/extra/vfs_read.md
-                - vfs_readv: docs/events/builtin/extra/vfs_readv.md
-                - file_modification: docs/events/builtin/extra/file_modification.md
-                - security_file_mprotect: docs/events/builtin/extra/security_file_mprotect.md
-                - security_socket_setsockopt: docs/events/builtin/extra/security_socket_setsockopt.md
                 - bpf_attach: docs/events/builtin/extra/bpf_attach.md
+                - do_sigaction: docs/events/builtin/extra/do_sigaction.md
+                - file_modification: docs/events/builtin/extra/file_modification.md
+                - ftrace_hook: docs/events/builtin/extra/ftrace_hook.md
+                - hidden_kernel_module: docs/events/builtin/extra/hidden_kernel_module.md
+                - hooked_syscalls: docs/events/builtin/extra/hooked_syscalls.md
+                - kallsysm_lookup_name: docs/events/builtin/extra/kallsyms_lookup_name.md
                 - magic_write: docs/events/builtin/extra/magic_write.md
                 - mem_prot_alert: docs/events/builtin/extra/mem_prot_alert.md
-                - symbols_loaded: docs/events/builtin/extra/symbols_loaded.md
-                - symbols_collision: docs/events/builtin/extra/symbols_collision.md
-                - hidden_kernel_module: docs/events/builtin/extra/hidden_kernel_module.md
                 - process_execute_failed: docs/events/builtin/extra/process_execute_failed.md
                 - security_bpf_prog: docs/events/builtin/extra/security_bpf_prog.md
                 - security_bprm_check: docs/events/builtin/extra/security_bprm_check.md
+                - security_file_mprotect: docs/events/builtin/extra/security_file_mprotect.md
+                - security_socket_setsockopt: docs/events/builtin/extra/security_socket_setsockopt.md
+                - symbols_collision: docs/events/builtin/extra/symbols_collision.md
+                - symbols_loaded: docs/events/builtin/extra/symbols_loaded.md
+                - vfs_read: docs/events/builtin/extra/vfs_read.md
+                - vfs_readv: docs/events/builtin/extra/vfs_readv.md
           - Custom Events:
               - Overview: docs/events/custom/overview.md
               - Go: docs/events/custom/golang.md
@@ -540,6 +542,8 @@ nav:
           - Healthz: docs/integrating/healthz.md
       - Data Sources:
           - Overview: docs/data-sources/overview.md
+          - Containers: docs/data-sources/containers.md
+          - Process Tree: docs/data-sources/process-tree.md
       - Deep Dive:
           - Caching Events: docs/deep-dive/caching-events.md
           - Ordering Events: docs/deep-dive/ordering-events.md
